/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.3/userguide/java_library_plugin.html
 */

plugins {
  id 'application'
  id 'org.openjfx.javafxplugin' version '0.0.8'
  
   //id 'com.github.sherter.google-java-format' version '0.8'
}

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    //mavenCentral()
    jcenter()
}

dependencies {
	implementation 'com.opencsv:opencsv:4.1'
	implementation 'de.jensd:fontawesomefx-commons:11.0'
    implementation 'com.google.guava:guava:28.2-jre'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    //JFX dependancies
    implementation 'com.jfoenix:jfoenix:9.0.10'
    compile 'com.jfoenix:jfoenix:8.0.10'
}
javafx {
    version = "15"
    modules = [ 'javafx.controls', 'javafx.fxml' , 'javafx.graphics', 'javafx.base' ]
}

sourceCompatibility = 1.8
targetCompatibility = 1.8
//apply plugin: 'com.github.sherter.google-java-format'

//group = 'com.google.maps'
run {
    if (javafx.platform.classifier == 'win') {
        // Temporal fix for Eclipse with JDK 1.8 and Windows 
        systemProperty "java.library.path", "C:\tmp"
    }
    
}

run {
    jvmArgs = [
            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
            "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
            "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
            "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
    ]
}
mainClassName = 'application.Main'